tests/fixtures/invalid/pow_float_dict_str.py
# Cannot call pow() with Float, Dict[str, int], Str
x = pow(1.0, {"a": 1}, "hello")
